--- a/bio_szkielet_07_win.vcxproj.filters
+++ b/bio_szkielet_07_win.vcxproj.filters
@@ -13,15 +13,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="physics">
-      <UniqueIdentifier>{96ff4abe-a2ef-4ac2-acaf-4e112d9526f8}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="io">
-      <UniqueIdentifier>{4dc706f2-ba10-41ca-8d6e-f9785b671263}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="graphics">
-      <UniqueIdentifier>{f89a90bd-c7d5-4697-b66a-2ba27ae0ee36}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="allmodels.h">
@@ -60,32 +51,14 @@
     <ClInclude Include="LoadedModel.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="bounds.h">
-      <Filter>physics</Filter>
-    </ClInclude>
-    <ClInclude Include="rigidbody.h">
-      <Filter>physics</Filter>
-    </ClInclude>
-    <ClInclude Include="mouse.h">
-      <Filter>io</Filter>
-    </ClInclude>
-    <ClInclude Include="keyboard.h">
-      <Filter>io</Filter>
-    </ClInclude>
-    <ClInclude Include="camera.h">
-      <Filter>io</Filter>
-    </ClInclude>
-    <ClInclude Include="screen.h">
-      <Filter>io</Filter>
-    </ClInclude>
-    <ClInclude Include="texture.h">
-      <Filter>graphics</Filter>
-    </ClInclude>
-    <ClInclude Include="stb_image.h">
+    <ClInclude Include="..\..\bio_szkielet_07_win\camera.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="mesh.h">
-      <Filter>graphics</Filter>
+    <ClInclude Include="..\..\bio_szkielet_07_win\keyboard.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\bio_szkielet_07_win\mouse.h">
+      <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -113,35 +86,17 @@
     <ClCompile Include="torus.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="bounds.cpp">
-      <Filter>physics</Filter>
-    </ClCompile>
-    <ClCompile Include="rigidbody.cpp">
-      <Filter>physics</Filter>
-    </ClCompile>
-    <ClCompile Include="mouse.cpp">
-      <Filter>io</Filter>
-    </ClCompile>
-    <ClCompile Include="keyboard.cpp">
-      <Filter>io</Filter>
-    </ClCompile>
-    <ClCompile Include="camera.cpp">
-      <Filter>io</Filter>
-    </ClCompile>
-    <ClCompile Include="screen.cpp">
-      <Filter>io</Filter>
-    </ClCompile>
-    <ClCompile Include="texture.cpp">
-      <Filter>graphics</Filter>
-    </ClCompile>
     <ClCompile Include="LoadedModel.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="stb_image.cpp">
+    <ClCompile Include="camera.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="mesh.cpp">
-      <Filter>graphics</Filter>
+    <ClCompile Include="keyboard.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+    <ClCompile Include="mouse.cpp">
+      <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
