--- a/bio_szkielet_07_win.vcxproj
+++ b/bio_szkielet_07_win.vcxproj
@@ -22,22 +22,17 @@
     <ClInclude Include="..\..\bio_szkielet_07_win\camera.h" />
     <ClInclude Include="..\..\bio_szkielet_07_win\keyboard.h" />
     <ClInclude Include="..\..\bio_szkielet_07_win\mouse.h" />
-    <ClInclude Include="allmodels.h" />
+    <ClInclude Include="bounds.h" />
     <ClInclude Include="constants.h" />
-    <ClInclude Include="cube.h" />
     <ClInclude Include="LoadedModel.h" />
     <ClInclude Include="lodepng.h" />
     <ClInclude Include="model.h" />
     <ClInclude Include="model_loader.h" />
-    <ClInclude Include="myCube.h" />
     <ClInclude Include="shaderprogram.h" />
-    <ClInclude Include="sphere.h" />
-    <ClInclude Include="teapot.h" />
-    <ClInclude Include="torus.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="bounds.cpp" />
     <ClCompile Include="camera.cpp" />
-    <ClCompile Include="cube.cpp" />
     <ClCompile Include="keyboard.cpp" />
     <ClCompile Include="LoadedModel.cpp" />
     <ClCompile Include="lodepng.cpp" />
@@ -45,9 +40,6 @@
     <ClCompile Include="model.cpp" />
     <ClCompile Include="mouse.cpp" />
     <ClCompile Include="shaderprogram.cpp" />
-    <ClCompile Include="sphere.cpp" />
-    <ClCompile Include="teapot.cpp" />
-    <ClCompile Include="torus.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="f_colored.glsl" />
