--- a/bio_szkielet_07_win.vcxproj.filters
+++ b/bio_szkielet_07_win.vcxproj.filters
@@ -33,12 +33,6 @@
     <ClInclude Include="model_loader.h">
       <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
-    <ClInclude Include="model.h">
-      <Filter>Pliki nagłówkowe</Filter>
-    </ClInclude>
-    <ClInclude Include="bounds.h">
-      <Filter>Pliki nagłówkowe</Filter>
-    </ClInclude>
     <ClInclude Include="camera.h">
       <Filter>io</Filter>
     </ClInclude>
@@ -47,6 +41,15 @@
     </ClInclude>
     <ClInclude Include="mouse.h">
       <Filter>io</Filter>
+    </ClInclude>
+    <ClInclude Include="bounds.h">
+      <Filter>physics</Filter>
+    </ClInclude>
+    <ClInclude Include="rigidbody.h">
+      <Filter>physics</Filter>
+    </ClInclude>
+    <ClInclude Include="model.h">
+      <Filter>physics</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -59,12 +62,6 @@
     <ClCompile Include="shaderprogram.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="model.cpp">
-      <Filter>Pliki źródłowe</Filter>
-    </ClCompile>
-    <ClCompile Include="bounds.cpp">
-      <Filter>Pliki źródłowe</Filter>
-    </ClCompile>
     <ClCompile Include="camera.cpp">
       <Filter>io</Filter>
     </ClCompile>
@@ -73,6 +70,15 @@
     </ClCompile>
     <ClCompile Include="keyboard.cpp">
       <Filter>io</Filter>
+    </ClCompile>
+    <ClCompile Include="bounds.cpp">
+      <Filter>physics</Filter>
+    </ClCompile>
+    <ClCompile Include="rigidbody.cpp">
+      <Filter>physics</Filter>
+    </ClCompile>
+    <ClCompile Include="model.cpp">
+      <Filter>physics</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
