--- a/bio_szkielet_07_win.vcxproj.filters
+++ b/bio_szkielet_07_win.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="model.h">
       <Filter>physics</Filter>
     </ClInclude>
+    <ClInclude Include="textureloader.h">
+      <Filter>Pliki nagłówkowe</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="lodepng.cpp">
@@ -79,6 +82,9 @@
     </ClCompile>
     <ClCompile Include="model.cpp">
       <Filter>physics</Filter>
+    </ClCompile>
+    <ClCompile Include="textureloader.cpp">
+      <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
